# Cpp

./: CMakeLists.txt  POINT.h  main.cpp  rectangle.cpp  rectangle.h  rectangle2.cpp
Ex/ex2/: Point.cpp  Point.h  main.cpp  rectangle.cpp  rectangle.h
Ex/ex3/: Polynome.cpp  Polynome.h  main.cpp
TP1/: rectangle.cpp  rectangle2.cpp  rectangle2.h
