cmake_minimum_required(VERSION 4.1)
project(Partie1_2 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(Partie1_2
        #main.cpp
        #TP1/rectangle.cpp
        #TP1/rectangle2.cpp
        #TP1/rectangle2.h
        #TP1/rectangle.h

        #Ex/ex3/Polynome.h
        #Ex/ex3/Polynome.cpp
        #Ex/ex3/main.cpp

        Ex/ex2/Point.h
        Ex/ex2/Point.cpp
        Ex/ex2/rectangle.h
        Ex/ex2/rectangle.cpp
        Ex/ex2/main.cpp
)